# Inverted-LQR-Bot-Eklavya

./: Bipolar_Stepper_Motor.md  Control Bootcamp_Vedant.md  ControlBootcamp_Notes_Mahesh.md  Control_Bootcamp_Vedant.md  LICENSE  Linear_Algebra_Notes_.md  Linear_Algebra_Notes_Vedant  Linear_Algebra_Notes_Vedant.md  README.md  hardware_issues.md
Inverted_Pendulum_modelling/: Inverted_Pendulum.m  README.md
LED_blink_Task/: sdkconfig.old
LED_blink_Task/main/: main.c
LED_blink_task/: led_blink.c
Notes/Mahesh/: ControlBootcamp_Notes_Mahesh.md  Controlling_Stepper_Motor.md  LA_Notes_Mahesh.md
Notes/Vedant/: Bipolar_Stepper_Motor.md  Linear_Algebra_Notes_Vedant.md
Notes/Vedant/assets/: Screencast from 26-09-22 02:59:55 PM IST.webm
Octave Tasks/Task_1/Task_1_1/: Function_File.m
Octave Tasks/Task_1/Task_1_2/: Complex_Pulley.m  Mass_Spring_System.m  Simple_Pendulum.m  Simple_Pulley.m
Octave_Tasks/: README.md
Octave_Tasks/Mahesh_Task_1/: inverted_pendulum.m
Octave_Tasks/Mahesh_Task_1/Task1_1/: Task1_1.m
Octave_Tasks/Mahesh_Task_1/Task1_2/: complex_pulley.m  mass_spring_system.m  simple_pendulum.m  simple_pulley.m
Octave_Tasks/Vedant_Task_1/: Inverted_Pendulum.m
Octave_Tasks/Vedant_Task_1/Task_1_1/: Function_File.m
Octave_Tasks/Vedant_Task_1/Task_1_2/: Complex_Pulley.m  Mass_Spring_System.m  Simple_Pendulum.m  (+1 more)
components/: CMakeLists.txt
components/include/: i2cdev.h  mpu6050.h  pin_defs.h
components/src/: mpu6050.c
firmware/: CMakeLists.txt
firmware/main/: main.c
stepper_control/: README.md  sdkconfig
stepper_control/main/: main.c
